--- a/cook/BookTemplate.tex
+++ b/cook/BookTemplate.tex
@@ -133,6 +133,34 @@
 \label{README::doc}\label{README:booktemplate-title}\label{README:booktemplate-for-continuous-publishing}
 Take a look at cook folders.
 
+這本書是「ContPub」的 GitHub 範本書，
+您可以利用這個範本為基礎，開始製作您個人出版的書籍。
+
+您可以在 GitHub 網址：
+
+\begin{Verbatim}[commandchars=@\[\]]
+https://github.com/contpub/BookTemplate
+\end{Verbatim}
+
+取得所有本電子書的原始碼。
+
+如果您想預覽此範本產生的電子書，請下載以下 PDF 檔案。
+
+\begin{Verbatim}[commandchars=@\[\]]
+https://github.com/contpub/BookTemplate/raw/master/cook/BookTemplate.pdf
+\end{Verbatim}
+
+您也可以利用 Google Docs Viewer 線上預覽此書：
+
+\begin{Verbatim}[commandchars=@\[\]]
+http://goo.gl/g4T8p
+\end{Verbatim}
+
+
+\section{歡迎您加入開放電子書創作行列}
+\label{README:id1}
+現在起，人人都能出版！
+
 
 
 \renewcommand{\indexname}{Index}
