--- a/cook/BookTemplate.tex
+++ b/cook/BookTemplate.tex
@@ -129,9 +129,9 @@
 
 
 
-\chapter{BookTemplate for Continuous Publishing}
-\label{README::doc}\label{README:booktemplate-title}\label{README:booktemplate-for-continuous-publishing}
-Take a look at cook folders.
+\chapter{Continuous Publishing}
+\label{README:continuous-publishing}\label{README::doc}\label{README:booktemplate-title}
+Book Template for ContPub (Continuous Publishing).
 
 這本書是「ContPub」的 GitHub 範本書，
 您可以利用這個範本為基礎，開始製作您個人出版的書籍。
@@ -144,22 +144,22 @@ https://github.com/contpub/BookTemplate
 
 取得所有本電子書的原始碼。
 
-如果您想預覽此範本產生的電子書，請下載以下 PDF 檔案。
+如果您想預覽此範本產生的電子書，請 \href{http://goo.gl/XHCeQ}{下載} 以下 PDF 檔案。
 
 \begin{Verbatim}[commandchars=@\[\]]
-https://github.com/contpub/BookTemplate/raw/master/cook/BookTemplate.pdf
+http://goo.gl/XHCeQ
 \end{Verbatim}
 
-您也可以利用 Google Docs Viewer 線上預覽此書：
+您也可以利用 Google Docs Viewer 線上 \href{http://goo.gl/g4T8p}{預覽} 此書：
 
 \begin{Verbatim}[commandchars=@\[\]]
 http://goo.gl/g4T8p
 \end{Verbatim}
 
 
-\section{歡迎您加入開放電子書創作行列}
-\label{README:id1}
-現在起，人人都能出版！
+\section{現在起，人人都能出版！}
+\label{README:id3}
+歡迎您加入開放電子書創作行列。
 
 
 
