--- a/cook/BookTemplate.tex
+++ b/cook/BookTemplate.tex
@@ -161,6 +161,21 @@ http://goo.gl/g4T8p
 \label{README:id3}
 歡迎您加入開放電子書創作行列。
 
+Continuous Publishing 是一項電子書出版改革，
+ContPub 的理念就是讓每個人都能輕易利用電腦「書寫」，
+並且在「毫不費力」的流程下將電子書出版發行。
+如果您有興趣瞭解多一些，請參考以下資料：
+\begin{itemize}
+\item {} 
+敏捷技術寫作（Agile Technical Writing）
+\href{https://github.com/lyhcode/AgileTechnicalWriting}{https://github.com/lyhcode/AgileTechnicalWriting}
+
+\item {} 
+Lean Publishing
+\href{http://leanpub.com/}{http://leanpub.com/}
+
+\end{itemize}
+
 
 
 \renewcommand{\indexname}{Index}
